--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,7 +1,8 @@
 .card {
   width: 550px;
-  background-color: #0e0d0d;
+  background:linear-gradient(103.22deg, rgba(4, 40, 76, 0.934375) 99.55%,rgba(71, 174, 234, 1) 13.86%);
   height: 800px;
+  position: relative;
   border-radius: 1rem;
   padding: 2rem;
   opacity: 0.9;
