--- a/src/components/FlagInput/FlagInput.css
+++ b/src/components/FlagInput/FlagInput.css
@@ -14,6 +14,12 @@
   border-radius: 50px 0px 0px 50px;
   outline: none;
 }
+.error_msg {
+  color:#FF4820;
+  font-size: 1.2rem;
+  margin-top: 0.5rem;
+  margin-left: 0.5rem;
+}
 
 .inputBtn {
   width: 20%;
@@ -24,7 +30,7 @@
   border-radius: 0px 50px 50px 0px;
 }
 .inputContainer {
-  display: flex;
+  display: block;
   flex-direction: row;
   width: 80%;
   margin: 0 auto;
