--- a/src/containers/blog/blog.css
+++ b/src/containers/blog/blog.css
@@ -24,7 +24,7 @@
 
 .gp__blog-container_groupA {
   flex: 0.75;
-  margin-right: 2rem;
+  margin-right: 1rem;
 }
 
 .gp__blog-container_groupB {
@@ -35,6 +35,45 @@
   grid-gap: 2rem;
 }
 
+@media screen and (max-width: 990px) {
+  .gp__blog-container {
+    flex-direction: column-reverse;
+  }
+
+  .gp__blog-container_groupA {
+    margin: 2rem 0;
+  }
+
+  .gp_blog-container_groupA .gpt3_blog-container_article {
+    width: 48%;
+  }
+
+  .gp_blog-container_groupA .gpt3_blog-container_article-image {
+    height: 250px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .gp__blog-container_groupB {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .gp_blog-container_groupA .gpt3_blog-container_article {
+    width: 100%;
+  }
+
+  .gp__blog-heading h1 {
+    font-size: 46px;
+    line-height: 52px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .gp__blog-heading h1 {
+    font-size: 34px;
+    line-height: 42px;
+  }
+}
 @media screen and (max-width: 990px) {
   .gp__blog-container {
     flex-direction: column-reverse;
