--- a/src/containers/UserProfileData/UserProfileData.css
+++ b/src/containers/UserProfileData/UserProfileData.css
@@ -2,4 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    padding: 20px;
+    height: 100%;
+    overflow-y: scroll;
 }
