--- a/src/components/error/Error.css
+++ b/src/components/error/Error.css
@@ -1,56 +1,98 @@
-.bg{
-    background: linear-gradient(155.23deg, #040C18 2.74%, rgba(4, 40, 76, 0.934375) 83.3%, rgba(3, 27, 52, 0.9) 98.22%);
-}
-.img {
-    width: 30rem;
-    height: 30rem;
-    margin-left: 33rem;
-  }
-
-  .h1{
-    display: "flex";
-    flex-direction: "vertical";
-    justify-content: "center";
-    text-align: "center";
-    height: "100%";
-    font-style: "Bold";
-    color: azure;
-    font-family: "Inter";
-    font-style: normal;
-    margin-left: 45rem;
-    align-items: "center";
-    
-  }
-
-  .h {
-    width: 500px;
-    height: 48px;
-    color: azure;
-    font-family: "Inter";
-    font-style: "Regular";
-    font-size: 25px;
-    line-height: 100%;
-    justify-content: "center";
-    display: flex;
-    margin-top: 20px;
-    text-align: "center";
-    margin-left: 34rem;
-    align-items: "Center";
-    border: none;
-  }
-
-.b1 {
-    position: absolute;
-    width: 200px;
-    height: 70.09px;
-    left: 680px;
-    font-size: 22px;
-    top: 600px;
-    font-weight: bold;
-    color:aliceblue;
-    cursor: pointer;
-    background-color: rgba(255, 114, 94, 0.81);
-    border-radius: 20px;
+.imgerr {
+  width: 30rem;
+  height: 30rem;
+  margin-left: 33rem;
 }
 
+.h1err{
+  justify-content: center;
+  text-align: center;
+  font-style: Bold;
+  color: azure;
+  margin-right: 20rem;
+  margin-top: 0.5rem;
+  font-family: "Inter";
+  font-style: normal;
+  margin-left: 22rem;
+  align-items: "center";
   
+}
+
+.herr {
+  width: 500px;
+  height: 48px;
+  color: azure;
+  font-family: "Inter";
+  font-style: "Regular";
+  font-size: 25px;
+  line-height: 100%;
+  justify-content: "center";
+  display: flex;
+  margin-top: 20px;
+  text-align: "center";
+  margin-left: 34rem;
+  align-items: "Center";
+  border: none;
+}
+.b1err {
+  position: absolute;
+  width: 200px;
+  height: 70.09px;
+  margin-left: 680px;
+  font-size: 22px;
+  top: 600px;
+  font-weight: bold;
+  color:aliceblue;
+  cursor: pointer;
+  background-color: rgba(255, 114, 94, 0.81);
+  border-radius: 20px;
+  border-color: rgba(255, 114, 94, 0.81);
+}
+
+@media (max-width: 768px) {
+.imgerr {
+  width: 45%;
+  margin-top: 30px;
+  font-size: 20px;
+  line-height: 40px;
+  height: 49%;
+  margin-left: 13rem;
+}
+}
+
+@media (max-width: 768px) {
+.h1err{
+  display: inline;
+  width: 42%;
+  font-weight: 500;
+  margin-top: 21px;
+  font-size: 28px;
+  line-height: 35px;
+  margin-left: 21.5rem;
+}
+}
+@media (max-width: 768px) {
+.herr {
+  display: inline;
+  width: 42%;
+  font-weight: 500;
+  margin-top: 25px;
+  font-size: 20px;
+  line-height: 40px;
+  height: 3%;
+  margin-left: 12.5rem;
+}
+}
+@media (max-width: 768px) {
+.b1err {
+  display: block;
+  width: 30%;
+  font-weight: 500;
+  margin-top: -125px;
+  margin-bottom: 5px;
+  font-size: 20px;
+  line-height: 40px;
+  height: 10%;
+  margin-left: 17rem;
+}
+}
