--- a/src/components/LearnAccordion/LearnAccordion.css
+++ b/src/components/LearnAccordion/LearnAccordion.css
@@ -47,8 +47,11 @@ font-size: x-large;
 .imgstyle{
 height: auto;
 width: 100%;
+align-items: center;
 margin-top: 0.5rem;
 padding: 1rem;
+margin-left: 35px;
+margin-right: 35px;
 }
 /* Body Text */
 .bodyText {
