--- a/src/containers/Lab_card/labcard.css
+++ b/src/containers/Lab_card/labcard.css
@@ -22,3 +22,19 @@
     grid-template-columns: repeat(auto-fit, minmax(14rem, 16rem));
   }
 }
+@media (max-width: 576px) {
+  .wrapper {
+    grid-template-columns: 1fr;
+    justify-items: center;
+
+  }
+  .learning {
+    grid-template-columns: 1fr;
+
+    margin: 2rem;
+    display: grid;
+    margin-top: 3rem;
+    gap: 3rem;
+   justify-items: center;
+  }
+}
